--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "silex/silex": "~1.0",
+        "silex/silex": "~2.0@dev",
         "symfony/security": "~2.3",
         "doctrine/dbal": "~2.4",
         "symfony/twig-bridge": "~2.3",
